--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
     meta_description = "a description of your website."
     meta_og_title = "My Theme"
     meta_og_type = "website"
-    meta_og_url = "https://www.mywebsite.com"
+    meta_og_url = "https://www.infallible-kilby-726ff7.netlify.app"
     meta_og_image = "https://www.mywebsite.com/images/tn.png"
     meta_og_description = "a description of your website."
     meta_twitter_card = "summary"
